--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -17,88 +16,96 @@
             android:padding="@dimen/_5sdp">
 
 
-            <ImageView
-                android:id="@+id/imageStatus"
-                android:contentDescription="@string/app_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_money_in" />
-
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
+                android:id="@+id/txtWithdrawalAmount"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:fontFamily="@font/montserrat"
-                android:text="@string/ref_no"
-                android:gravity="start|center"
-                android:textColor="@color/light_text_color"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintBottom_toTopOf="@+id/txtRef"
-                app:layout_constraintStart_toEndOf="@+id/imageStatus"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread_inside" />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtRef"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:textSize="@dimen/_11sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/dark_text_color"
-                android:layout_marginBottom="@dimen/_5sdp"
-                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
-                app:layout_constraintStart_toEndOf="@+id/imageStatus"
-                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+                android:textSize="@dimen/_12sdp"
+                app:layout_constraintEnd_toStartOf="@+id/view41"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtCreateDate"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
+                android:drawableStart="@drawable/ic_request_date"
+                android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
+                android:gravity="center|start"
+                android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
-                android:gravity="start|center"
-                android:drawableStart="@drawable/ic_calendar_icon"
-                android:drawablePadding="@dimen/_5sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageStatus"
+                app:layout_constraintEnd_toStartOf="@+id/view41"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtRef" />
 
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
-                android:textStyle="bold"
-                android:gravity="start|center"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/txtAmountStatus"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtAmountStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
-                android:textStyle="bold"
-                android:gravity="start|center"
-                android:textSize="@dimen/_10sdp"
-                android:paddingStart="@dimen/_4sdp"
-                android:paddingEnd="@dimen/_1sdp"
+            <View
+                android:id="@+id/view41"
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="0dp"
+                android:layout_marginStart="@dimen/_80sdp"
+                android:background="@color/divider_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/textView69"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/transfer_amount"
+                android:textColor="@color/light_text_color"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/txtTransferAmount"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/view41"
+                app:layout_constraintTop_toTopOf="@+id/txtWithdrawalAmount" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtTransferAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/view41"
+                app:layout_constraintTop_toBottomOf="@+id/textView69" />
+
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/buttonStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorSemiWhite"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="@+id/txtCreateDate"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/view41"
+                app:layout_constraintTop_toBottomOf="@+id/txtTransferAmount" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtRef"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/light_text_color"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
+                app:layout_constraintEnd_toStartOf="@+id/view41"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtWithdrawalAmount" />
 
 
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
-
 </LinearLayout>
