--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/dark_text_color"
-                android:textSize="@dimen/_12sdp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintEnd_toStartOf="@+id/view41"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +47,7 @@
                 android:id="@+id/view41"
                 android:layout_width="@dimen/_1sdp"
                 android:layout_height="0dp"
-                android:layout_marginStart="@dimen/_80sdp"
+                android:layout_marginStart="@dimen/_85sdp"
                 android:background="@color/divider_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -81,12 +81,17 @@
 
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_15sdp"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_25sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:textAllCaps="false"
-                android:textColor="@color/colorSemiWhite"
-                android:textSize="@dimen/_10sdp"
+                android:text="@string/app_name"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_8sdp"
+                android:gravity="center"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 app:layout_constraintBottom_toBottomOf="@+id/txtCreateDate"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/view41"
