--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -73,6 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
+                android:textSize="@dimen/_11sdp"
                 android:textColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -82,12 +83,12 @@
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonStatus"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_25sdp"
+                android:layout_height="@dimen/_26sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:textAllCaps="false"
                 android:text="@string/app_name"
                 android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_8sdp"
+                android:textSize="@dimen/_9sdp"
                 android:gravity="center"
                 android:fontFamily="@font/montserrat"
                 android:layout_marginStart="@dimen/_5sdp"
