--- a/app/src/main/res/layout/dialog_country.xml
+++ b/app/src/main/res/layout/dialog_country.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="@dimen/_300sdp"
+    android:layout_gravity="center"
+   >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_300sdp"
-        android:layout_centerInParent="true"
-        android:layout_margin="@dimen/_7sdp"
-        >
+        <com.app.l_pesa.common.CommonEditTextRegular
+            android:id="@+id/etCountry"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:textColor="@color/textColors"
+            android:textSize="@dimen/_12sdp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:inputType="text|textNoSuggestions"
+            android:hint="@string/search_country"
+            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
+            />
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_country"
+            android:layout_below="@+id/etCountry"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-
-    </RelativeLayout>
 
 </RelativeLayout>
