--- a/app/src/main/res/layout/layout_country.xml
+++ b/app/src/main/res/layout/layout_country.xml
@@ -27,12 +27,14 @@ android:gravity="center|start"
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_country_name"
+                android:fontFamily="@font/montserrat"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:layout_toEndOf="@+id/img_flag"
                 android:gravity="center|start"
-                android:textSize="@dimen/_13sdp" />
+                android:textColor="@color/textColors"
+                android:textSize="@dimen/_12sdp" />
 
     </RelativeLayout>
 
