--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/txtReqToken"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/request_token"
+                android:text="@string/requested"
                 android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
                 android:fontFamily="@font/montserrat"
