--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -21,14 +21,14 @@
         android:layout_height="@dimen/_175sdp"
         >
 
-        <android.support.constraint.ConstraintLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/ic_wallet_bg"
             android:padding="@dimen/_3sdp">
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView14"
+                android:id="@+id/textWalletBal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_7sdp"
@@ -41,7 +41,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtWalletBalance"
+                android:id="@+id/txtWalletBal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TZS 2320"
@@ -49,10 +49,12 @@
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/_15sdp"
+                android:layout_below="@+id/textWalletBal"
                 android:layout_marginTop="@dimen/_2sdp"
                 android:layout_marginStart="@dimen/_7sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                />
+
+
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtCommission"
@@ -64,13 +66,11 @@
                 android:textColor="@color/colorWhite"
                 android:text="@string/commission_for_l_pesa"
                 android:gravity="center"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_alignParentBottom="true"
+
+
                 />
-
-
-        </android.support.constraint.ConstraintLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
