--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -8,6 +8,7 @@
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLayout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/screenBackground">
@@ -122,6 +123,58 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
+
+       <android.support.v7.widget.CardView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="@dimen/_10sdp">
+
+           <android.support.constraint.ConstraintLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">
+
+
+               <ImageView
+                   android:id="@+id/imageView33"
+                   android:contentDescription="@string/app_name"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="@dimen/_10sdp"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintTop_toTopOf="parent"
+                   app:srcCompat="@drawable/menu_lpk_icon" />
+
+               <TextView
+                   android:id="@+id/textView24"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="@dimen/_10sdp"
+                   android:fontFamily="@font/montserrat"
+                   android:text="@string/token_transfer"
+                   android:textColor="@color/colorSemiBlack"
+                   android:textSize="@dimen/_12sdp"
+                   android:textStyle="bold"
+                   app:layout_constraintBottom_toBottomOf="@+id/imageView33"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintStart_toEndOf="@+id/imageView33"
+                   app:layout_constraintTop_toTopOf="@+id/imageView33" />
+
+               <TextView
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="@dimen/_10sdp"
+                   android:fontFamily="@font/montserrat"
+                   android:textSize="@dimen/_9sdp"
+                   android:text="@string/erc_wallet_address_details"
+                   android:textColor="@color/colorSemiBlack"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintTop_toBottomOf="@+id/textView24" />
+
+           </android.support.constraint.ConstraintLayout>
+
+       </android.support.v7.widget.CardView>
 
 </LinearLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
