--- a/app/src/main/res/layout/content_transaction_history.xml
+++ b/app/src/main/res/layout/content_transaction_history.xml
@@ -57,6 +57,7 @@
                     android:layout_marginTop="@dimen/_5sdp"/>
 
                 <TextView
+                    android:id="@+id/txt_message"
                     android:layout_marginStart="@dimen/_12sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_12sdp"
