--- a/app/src/main/res/layout/fragment_withdrawal_history.xml
+++ b/app/src/main/res/layout/fragment_withdrawal_history.xml
@@ -50,13 +50,12 @@
                             android:layout_gravity="center"
                             android:layout_width="@dimen/_35sdp"
                             android:layout_height="@dimen/_35sdp"
-                            android:scaleType="fitXY"
-                            android:adjustViewBounds="true"
                             android:src="@drawable/ic_loan_history_img"
                             android:contentDescription="@string/app_name"
                             android:layout_marginTop="@dimen/_5sdp"/>
 
                         <TextView
+                            android:id="@+id/txt_message"
                             android:layout_marginStart="@dimen/_12sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_12sdp"
