--- a/app/src/main/res/layout/fragment_investment_history.xml
+++ b/app/src/main/res/layout/fragment_investment_history.xml
@@ -58,6 +58,56 @@
         </RelativeLayout>
 
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_12sdp"
+            android:elevation="@dimen/_3sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rlHeader"
+            android:visibility="invisible"
+
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/_5sdp"
+
+                >
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:src="@drawable/ic_loan_history_img"
+                    android:contentDescription="@string/app_name"
+                    android:layout_marginTop="@dimen/_5sdp"/>
+
+                <TextView
+                    android:id="@+id/txt_message"
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_12sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_12sdp"
+                    android:text="@string/empty_investment_message"
+                    android:gravity="center"
+                    android:textColor="@color/textColors"
+                    android:fontFamily="@font/montserrat"
+                    />
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvLoan"
             android:layout_width="match_parent"
@@ -70,6 +120,7 @@
 
 
     </android.support.constraint.ConstraintLayout>
+
   </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.v4.widget.NestedScrollView
