--- a/app/src/main/res/layout/activity_wallet_history.xml
+++ b/app/src/main/res/layout/activity_wallet_history.xml
@@ -18,7 +18,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextAppearance="@style/Toolbar.TitleText">
+            app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:layout_scrollFlags="scroll|enterAlways">
 
         <ImageView
             android:id="@+id/imgFilter"
