--- a/app/src/main/res/layout/activity_wallet_history.xml
+++ b/app/src/main/res/layout/activity_wallet_history.xml
@@ -39,6 +39,13 @@
 
     <include layout="@layout/content_wallet_history" />
 
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
+
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
@@ -51,5 +58,7 @@
             layout="@layout/layout_filter_by_date"/>
 
     </android.support.v4.widget.NestedScrollView>
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </android.support.design.widget.CoordinatorLayout>
